...
//     _passwordController.dispose();
//     super.dispose();
//   }

//   String? _validateUsername(String? value) {
//     if (value == null || value.isEmpty) {
//       return 'Username is required';
//     }
//     return null;
//   }

//   String? _validateEmail(String? value) {
//     if (value == null || value.isEmpty) {
//       return 'Email is required';
//     } else if (!RegExp(r'^[^@]+@[^@]+\.[^@]+').hasMatch(value)) {
//       return 'Enter a valid email address';
//     }
//     return null;
//   }

//   String? _validateContact(String? value) {
//     if (value == null || value.isEmpty) {
//       return 'Phone number is required';
//     } else if (!RegExp(r'^\d{10}$').hasMatch(value)) {
//       return 'Enter a valid 10-digit phone number';
//     }
//     return null;
//   }

//   String? _validatePassword(String? value) {
//     if (value == null || value.isEmpty) {
//       return 'Password is required';
//     } else if (value.length < 6) {
//       return 'Password must be at least 6 characters long';
//     }
//     return null;
//   }

//   @override
//   Widget build(BuildContext context) {
...
//                       shape: RoundedRectangleBorder(
//                         borderRadius:
//                             BorderRadius.circular(10.0), // Rounded corners
//                       ),
//                     ),
//                     child: const Text(
//                       'REGISTER',
//                       style: TextStyle(color: Colors.white),
//                     ),
//                   ),
//                 ),
//                 const SizedBox(height: 8.0),
//                 Row(
...
//                           context,
//                           MaterialPageRoute(
//                               builder: (context) => const LoginView()),
//                         );
//                       },
//                       child: const Text(
//                         'Login here',
//                         style: TextStyle(
//                           color: Colors.purple,
//                         ),
//                       ),
//                     ),
//                   ],
...
